<resources>
    <string name="app_name">Shopping List</string>
    <string name="no_lists">No Lists Yet</string>
    <string name="action_add_list">New List</string>
    <string name="action_product_list">Product List</string>
    <string name="menu_delete">Delete Product</string>
    <string name="menu_edit">Edit Product</string>
    <string name="name">Name</string>
    <string name="show_list">Show List</string>
    <string name="delete_list">Delete List</string>
    <string name="edit_list">Edit List</string>
    <string name="send_list">Send List</string>
    <string name="order_weight">Order by weight</string>
    <string name="order_price">Order by price</string>
    <string name="order_name">Order by name</string>
    <string name="price">Price</string>
    <string name="weight">Weight</string>
    <string name="ProductPrice">Price: </string>
    <string name="ProductWeight">Weight: </string>
    <string name="body">Body</string>
    <string name="confirm">Confirm</string>
    <string name="edit_note">Edit Note</string>
    <string name="title_activity_product_edit">Edit Product</string>
    <string name="title_activity_product_pad">Product List</string>
    <string name="title_activity_list_pad">List of Shopping Lists</string>
    <string name="title_activity_list_edit">Edit Shopping List</string>
    <string name="title_activity_add_product">Edit Product</string>
    <string name="title_activity_list_show">Show Shopping List</string>
    <string name="menu_insert_product">Add Product</string>
    <string name="no_products">No Products Yet</string>
    <string name="product">Product:</string>
    <string name="amount">Amount:</string>
    <string name="cross">x</string>
</resources>
